--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -4,6 +4,28 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+
+//signup page
+
+#signupbg {
+  background: rgb(92, 199, 142);
+  width: 100%;
+  height: 100%;
+}
+
+#signupsection {
+  background-color: white;
+  margin-top: 2%;
+  padding: 0px 20px;
+  padding-bottom: 10px;
+  position: absolute;
+  left: 37.5%;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  align-items: center;
+}
+
 form >* {
   margin-bottom: 10px;
 }
@@ -12,8 +34,69 @@ input, select {
   padding: .15rem .25rem;
   border-radius: .35rem;
   border: .5px black solid;
+  display: inline-block;
 }
 
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+#signupBtn {
+  background-color: white; /* Green */
+  border: 1px solid #4CAF50;
+  border-radius: 5px;
+  color: #4CAF50;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; 
+  transition-duration: 0.4s;
+  &:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
+  }
+}
+
+//login section
+#loginbg {
+  background: rgb(92, 199, 142);
+  width: 100%;
+  height: 100%;
+}
+
+#loginsection {
+  background-color: white;
+  margin-top: 2%;
+  padding: 0px 20px;
+  padding-bottom: 10px;
+  position: absolute;
+  left: 37.5%;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  align-items: center;
+}
+
+#loginBtn {
+  background-color: white; /* Green */
+  border: 1px solid #4CAF50;
+  border-radius: 5px;
+  color: #4CAF50;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; 
+  transition-duration: 0.4s;
+  &:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
+  }
+}
+
+//Homepage
 .container {
   background: rgb(92, 199, 142);
   display: flex;
@@ -42,15 +125,15 @@ input, select {
     button {
         padding: 8px 12px;
         border-radius: 3px;
-        border: 1px solid #FAEBEFFF;
-        color: #FAEBEFFF;
+        border: 1px solid white;
+        color: white;
         margin: 0px 8px;
         background-color: transparent;
         font-size: 16;
         font-weight: bold;
         transition-duration: 0.2s;
         &:hover {
-            background-color: #FAEBEFFF;
+            background-color: white;
             color: black;
             cursor: pointer;
         }
@@ -60,4 +143,55 @@ input, select {
 
 #loginlogo {
   width: 50px;
+}
+
+
+#cardDisplay {
+  display: flex;
+  flex-wrap: wrap;
+}
+#card {
+  padding: 15px;
+}
+
+
+/* Popup style */
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  color: black;
+}
+ 
+.box {
+position: relative;
+width: 70%;
+margin: 0 auto;
+height: auto;
+max-height: 70vh;
+margin-top: calc(100vh - 85vh - 20px);
+background: #fff;
+border-radius: 4px;
+padding: 20px;
+border: 1px solid #999;
+overflow: auto;
+}
+
+.close-icon {
+content: 'x';
+cursor: pointer;
+position: fixed;
+right: calc(15% - 30px);
+top: calc(100vh - 85vh - 33px);
+background: #ededed;
+width: 25px;
+height: 25px;
+border-radius: 50%;
+line-height: 20px;
+text-align: center;
+border: 1px solid #999;
+font-size: 20px;
 }
