worked on sidebar

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -1,3 +1,14 @@
+// for Sidebar
+* {
+  box-sizing: border-box;
+}
+
+#page-wrap {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+////////
 body {
   background-color: white;
   margin: 0;
