--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -168,7 +168,7 @@ input[type=text]:focus, input[type=password]:focus {
  
 .box {
 position: relative;
-width: 70%;
+width: 20%;
 margin: 0 auto;
 height: auto;
 max-height: 70vh;
@@ -184,7 +184,7 @@ overflow: auto;
 content: 'x';
 cursor: pointer;
 position: fixed;
-right: calc(15% - 30px);
+right: calc(40% - 30px);
 top: calc(100vh - 85vh - 33px);
 background: #ededed;
 width: 25px;
@@ -194,4 +194,13 @@ line-height: 20px;
 text-align: center;
 border: 1px solid #999;
 font-size: 20px;
+}
+
+#inputBox1 {
+  width: 100%;
+  height: 100px;
+}
+
+#submitBtn {
+  
 }
