--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -60,7 +60,8 @@ input[type=text]:focus, input[type=password]:focus {
   align-items: center;
 }
 
-button {
+#loginBtn,
+#signupBtn {
   padding: 10px 16px;
   width: 100px;
 }
@@ -172,12 +173,16 @@ button {
 
 #loginlogo {
   width: 50px;
+  position: absolute;
+    left: 80px;
+    top: 15px;
 }
 
 
 #cardDisplay {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 #card {
   padding: 15px;
@@ -233,3 +238,22 @@ font-size: 20px;
 // #submitBtn {
   
 // }
+#card {
+  border: 1px black solid;
+  border-radius: .5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  // margin: auto auto;
+}
+
+#card>* {
+  padding: 5px;
+}
+
+#profilepic {
+  border-radius: 50%;
+  width: 100px;
+  border: .5px solid black;
+}
