--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -95,7 +95,8 @@ input[type=text]:focus, input[type=password]:focus {
 
 #loginsection {
   background-color: white;
-  margin-top: 2%;
+  border-radius: .5rem;
+    margin-top: 5%;
   padding: 0px 20px;
   padding-bottom: 10px;
   position: absolute;
@@ -184,8 +185,10 @@ input[type=text]:focus, input[type=password]:focus {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
 #card {
   padding: 15px;
+  margin-top: 20px;
 }
 
 
