--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -10,7 +10,7 @@
 
 ////////
 body {
-  background-color: white;
+  background-color: rgba(92, 199, 142, 0.663);
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
@@ -242,12 +242,13 @@ font-size: 20px;
   
 // }
 #card {
-  border: 1px black solid;
+  border: 1px white solid;
   border-radius: .5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 400px;
+  background-color: white;
   // margin: auto auto;
 }
 
@@ -260,3 +261,17 @@ font-size: 20px;
   width: 100px;
   border: .5px solid black;
 }
+#requestCard {
+  border: 1px white solid;
+  border-radius: .5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  background-color: white;
+}
+
+// #reqDisplay {
+//   display: flex;
+
+// }
